--- a/challenge2.html
+++ b/challenge2.html
@@ -3,36 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Challenge</title>
+    <title>Word Matching Game - Challenge 1</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .selected { background-color: #d3d3d3; }
-        .correct { background-color: #d4edda; }
-        .challenge-input { margin: 5px; }
-    </style>
 </head>
 <body>
-    <h1>Word Matching Game - Challenge 2</h1>
-  
-    <div id="incomplete-words-container"></div>
-  
-    <div id="challenge-feedback"></div>
-  
-    <div id="score-container">
-        <span id="score">Score: 0</span>
+    <div id="game">
+        <h1>Word Matching Game - Challenge 1 
+            <span id="word-counter">(0/0)</span> <!-- Counter placeholder -->
+        </h1>
+
+        <!-- Carousel container -->
+        <div id="carousel-container">
+            <button id="prev-btn">&lt;</button> <!-- Previous Button -->
+            <div id="carousel">
+                <!-- Word cards will be dynamically inserted here -->
+            </div>
+            <button id="next-btn">&gt;</button> <!-- Next Button -->
+        </div>
+
+        <!-- Score and feedback section -->
+        <div id="score">Score: 0</div>
+
+        <!-- Check Answer Button -->
+        <button id="check-answer">Check Answer</button>
+
+        <!-- Reset Game Button -->
+        <button id="reset-game">Reset Game</button>
+
+        <!-- Link to return to the main menu -->
+        <a href="menu.html" class="menu-button">Return to Menu</a>
+
+        <!-- Feedback section -->
+        <div id="feedback"></div>
+
+        <!-- Definition or extra information (if needed) -->
+        <div id="definition-container"></div>
+
+        <!-- Message shown at the end of the game -->
+        <div id="finish-message"></div>
     </div>
-  
-    <button id="check-challenge-answer">Check Answers</button>
-  
-    <button id="back-to-challenge1">Back to Challenge 1</button>
-  
-    <button id="go-to-challenge2" style="display: none;">Go to Second Part</button>
-  
-    <button id="reset-game">Reset Game</button>
-  
-      <!-- New button to return to the menu -->
-      <a href="menu.html" class="menu-button">Return to Menu</a>
-  
+
+    <!-- Include the JS for this challenge -->
     <script src="challenge2.js"></script>
 </body>
 </html>
