--- a/challenge1.html
+++ b/challenge1.html
@@ -23,8 +23,8 @@
 
         <div id="score">Score: 0</div>
 
-        <button id="check-answer">Check Answer</button>
-        <button id="reset-game">Reset Game</button>
+        <!--button id="check-answer">Check Answer</button -->
+        <!--button id="reset-game">Reset Game</button -->
 
         <a href="menu.html" class="menu-button">Return to Menu</a>
 
