--- a/challenge1.html
+++ b/challenge1.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Game - Challenge 1</title>
+    <title>Word - Challenge 1</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="game">
-        <h1>Word Matching Game - Challenge 1 
+        <h1>Word Game - Challenge 1 
             <span id="word-counter">(0/0)</span> <!-- Counter placeholder -->
         </h1>
 
@@ -21,12 +21,9 @@
             <button id="next-btn">&gt;</button> <!-- Next Button -->
         </div>
 
-        <div id="score">Score: 0</div>
+        <!--div id="score">Score: 0</div-->
 
-        <!--button id="check-answer">Check Answer</button -->
-        <!--button id="reset-game">Reset Game</button -->
-
-        <a href="menu.html" class="menu-button">Return to Menu</a>
+        <a href="menu.html" class="menu-button center-button">Return to Menu</a>
 
         <div id="feedback"></div>
         <div id="definition-container"></div>
