--- a/menu.html
+++ b/menu.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Matching Game Menu</title>
+    <title>Word Game Menu</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Word Matching Game Menu</h1>
+    <h1>Word Game Menu</h1>
 
     <!-- Dropdown to select the word list -->
     <label for="word-list-select">Choose a word list:</label>
