--- a/challenge3.html
+++ b/challenge3.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Matching Game - Challenge 3</title>
+    <title>Word Game - Challenge 3</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="game">
-        <h1>Word Matching Game - Challenge 1</h1>
+        <h1>Word Game - Challenge 3</h1>
         
         <div id="score">Score: 0</div>
 
