--- a/challenge2.html
+++ b/challenge2.html
@@ -22,13 +22,13 @@
         </div>
 
         <!-- Score and feedback section -->
-        <div id="score">Score: 0</div>
+        <!--div id="score">Score: 0</div-->
 
         <!-- Check Answer Button -->
         <button id="check-answer">Check Answer</button>
 
         <!-- Reset Game Button -->
-        <button id="reset-game">Reset Game</button>
+        <!--button id="reset-game">Reset Game</button-->
 
         <!-- Link to return to the main menu -->
         <a href="menu.html" class="menu-button">Return to Menu</a>
