--- a/challenge2.html
+++ b/challenge2.html
@@ -31,7 +31,7 @@
         <!--button id="reset-game">Reset Game</button-->
 
         <!-- Link to return to the main menu -->
-        <a href="menu.html" class="menu-button">Return to Menu</a>
+        <a href="menu.html" class="menu-button center-button">Return to Menu</a>
 
         <!-- Feedback section -->
         <div id="feedback"></div>
