--- a/challenge2.html
+++ b/challenge2.html
@@ -24,8 +24,8 @@
         <!-- Score and feedback section -->
         <!--div id="score">Score: 0</div-->
 
-        <!-- Check Answer Button -->
-        <button id="check-answer">Check Answer</button>
+        <!-- Check Answer Button with the same styling as "Return to Menu" -->
+        <button id="check-answer" class="menu-button center-button">Check Answer</button>
 
         <!-- Reset Game Button -->
         <!--button id="reset-game">Reset Game</button-->
