--- a/challenge3.html
+++ b/challenge3.html
@@ -10,29 +10,27 @@
     <div id="game">
         <h1>Word Game - Challenge 3</h1>
         
-        <div id="score">Score: 0</div>
-
-        <div class="container-wrapper">
-            <div id="word-container"></div>
-            <div id="translation-container"></div>
+        <div class="status-container">
+            <div id="list-info" class="status-item">List: Challenge 3 Word List - Number of words: 20</div>
+            <div id="score" class="status-item">Score: 0</div>
+            <div id="lives" class="status-item">Lives: 3</div>
+            <div id="timer" class="status-item">Time: 10</div>
         </div>
-        <div class="game-container">
-            <div id="list-info" class="list-info"></div> <!-- New section for the list name and number of words -->
-            <div id="word-display" class="word-display"></div>
+
+        <div class="word-container">
+            <div id="word-display" class="word-display">viaje</div>
             <input type="text" id="translation-input" class="input-field" placeholder="Type the translation here">
-            <div id="timer" class="game-status">Time: 10</div>
             <div id="feedback" class="feedback"></div>
-            <div id="score" class="game-status">Score: 0</div>
-            <div id="lives" class="game-status">Lives: 3</div>
-            
-            <div class="button-container">
-                <button id="start-game" class="game-button">Start Game</button>
-                <button id="reset-game" class="game-button">Reset Game</button>
-                <button id="next-word" class="game-button">Next Word</button>
-                <button id="return-to-menu" class="game-button">Return to Menu</button>
-            </div>
         </div>
 
-<script src="challenge3.js"></script>
+        <div class="button-container">
+            <button id="start-game" class="menu-button center-button">Start Game</button>
+            <button id="reset-game" class="menu-button center-button">Reset Game</button>
+            <button id="next-word" class="menu-button center-button">Next Word</button>
+            <button id="return-to-menu" class="menu-button center-button">Return to Menu</button>
+        </div>
+    </div>
+
+    <script src="challenge3.js"></script>
 </body>
 </html>
