--- a/challenge2.html
+++ b/challenge2.html
@@ -24,14 +24,20 @@
         <!-- Score and feedback section -->
         <!--div id="score">Score: 0</div-->
 
+        <!-- Button container for Check Answer and Return to Menu -->
+        <div class="button-container">
+            <button id="check-answer" class="menu-button center-button">Check Answer</button>
+            <a href="menu.html" class="menu-button center-button">Return to Menu</a>
+        </div>
+
         <!-- Check Answer Button with the same styling as "Return to Menu" -->
-        <button id="check-answer" class="menu-button center-button">Check Answer</button>
+        <!--button id="check-answer" class="menu-button center-button">Check Answer</button-->
 
         <!-- Reset Game Button -->
         <!--button id="reset-game">Reset Game</button-->
 
         <!-- Link to return to the main menu -->
-        <a href="menu.html" class="menu-button center-button">Return to Menu</a>
+        <!--a href="menu.html" class="menu-button center-button">Return to Menu</a-->
 
         <!-- Feedback section -->
         <div id="feedback"></div>
