--- a/challenge3.html
+++ b/challenge3.html
@@ -11,7 +11,7 @@
         <h1>Word Game - Challenge 3</h1>
         
         <div class="status-container">
-            <div id="list-info" class="status-item">List: Challenge 3 Word List - Number of words: 20</div>
+            <div id="list-info" class="status-item">List: Number of words: 20</div>
             <div id="score" class="status-item">Score: 0</div>
             <div id="lives" class="status-item">Lives: 3</div>
             <div id="timer" class="status-item">Time: 10</div>
