--- a/challenge1.html
+++ b/challenge1.html
@@ -42,7 +42,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 <button class="spell-word">🔡 Spell Word</button>
             `;
 
-            // Event listener to play sound on button click
+            // Event listener to play pronunciation on button click
             card.querySelector('.play-sound').addEventListener('click', () => {
                 playPronunciation(word.english);
             });
