--- a/menu.html
+++ b/menu.html
@@ -29,6 +29,8 @@
             <a href="challenge1.html">Go to Challenge 1</a>
             <a href="challenge2.html">Go to Challenge 2</a>
             <a href="challenge3.html" id="challenge3-link">Go to Challenge 3</a>
+            <a href="challenge4.html">Go to Challenge 4</a>
+            
         </div>
 
         <!-- Modal for word list (Study words) -->
