--- a/challenge4.html
+++ b/challenge4.html
@@ -21,6 +21,7 @@
         <div class="button-container">
             <button id="submit-guess" class="menu-button center-button">Pronounce</button>
             <button id="reset-game" class="menu-button center-button">Next Word</button>
+            <a href="menu.html" class="menu-button center-button">Return to Menu</a> <!-- Return to Menu Button -->
         </div>
     </div>
 
