--- a/menu.html
+++ b/menu.html
@@ -30,6 +30,7 @@
             <a href="challenge2.html">Go to Challenge 2</a>
             <a href="challenge3.html" id="challenge3-link">Go to Challenge 3</a>
             <a href="challenge4.html">Go to Challenge 4</a>
+            <a href="challenge5.html">Go to Challenge 5</a>
             
         </div>
 
