--- a/challenge5.html
+++ b/challenge5.html
@@ -13,8 +13,8 @@
         
         <div class="button-container">
             <button id="restart-game" class="menu-button center-button">Restart Game</button>
-            <button id="prev-page">Previous</button>
-            <button id="next-page">Next</button>
+            <button id="prev-page" class="menu-button center-button">Previous</button>
+            <button id="next-page" class="menu-button center-button">Next</button>
             <a href="menu.html" class="menu-button center-button">Return to Menu</a>
         </div>
         
