--- a/challenge5.html
+++ b/challenge5.html
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <script src="words.js"></script>
+    <!-- <script src="words.js"></script> -->
     <script src="challenge5.js"></script> <!-- Your main game script -->
     
 </body>
