--- a/menu.html
+++ b/menu.html
@@ -31,6 +31,7 @@
             <a href="challenge3.html" id="challenge3-link">Go to Challenge 3</a>
             <a href="challenge4.html">Go to Challenge 4</a>
             <a href="challenge5.html">Go to Challenge 5</a>
+            <a href="matching.html">Play Matching Game</a>
             
         </div>
 
