Add Return to Menu link in matching game

--- a/matching.html
+++ b/matching.html
@@ -17,6 +17,7 @@
         <div class="button-container">
             <button id="check-answer" class="menu-button center-button">Check Answer</button>
             <button id="reset-game" class="menu-button center-button">Reset Game</button>
+            <a href="menu.html" class="menu-button center-button">Return to Menu</a>
         </div>
     </div>
     <script src="script_1.js"></script>
