Add unified scoring system and achievements

--- a/challenge1.html
+++ b/challenge1.html
@@ -30,6 +30,7 @@
         <div id="finish-message"></div>
     </div>
 
+    <script src="scoreboard.js"></script>
     <script src="challenge1.js"></script>
 </body>
 </html>
