--- a/challenge2.html
+++ b/challenge2.html
@@ -39,6 +39,7 @@
     </div>
 
     <!-- Include the JS for this challenge -->
+    <script src="scoreboard.js"></script>
     <script src="challenge2.js"></script>
 </body>
 </html>
