--- a/challenge5.html
+++ b/challenge5.html
@@ -24,6 +24,7 @@
     </div>
 
     <!-- <script src="words.js"></script> -->
+    <script src="scoreboard.js"></script>
     <script src="challenge5.js"></script> <!-- Your main game script -->
     
 </body>
