--- a/hangman.html
+++ b/hangman.html
@@ -37,6 +37,7 @@
         <button id="reset-button">Reset Game</button>
     </div>
 
+    <script src="scoreboard.js"></script>
     <script src="hangman.js"></script>
 </body>
 </html>
