--- a/menu.html
+++ b/menu.html
@@ -32,8 +32,11 @@
             <a href="challenge4.html">Go to Challenge 4</a>
             <a href="challenge5.html">Go to Challenge 5</a>
             <a href="matching.html">Play Matching Game</a>
-            
+
         </div>
+
+        <!-- Achievements -->
+        <div id="achievements"></div>
 
         <!-- Modal for word list (Study words) -->
         <div id="word-list-modal" class="modal" style="display: none;">
@@ -45,6 +48,7 @@
         </div>
     </div>
 
+    <script src="scoreboard.js"></script>
     <script src="menu.js"></script>
 </body>
 </html>
