--- a/challenge3.html
+++ b/challenge3.html
@@ -31,6 +31,7 @@
         </div>
     </div>
 
+    <script src="scoreboard.js"></script>
     <script src="challenge3.js"></script>
 </body>
 </html>
