--- a/challenge4.html
+++ b/challenge4.html
@@ -25,6 +25,7 @@
         </div>
     </div>
 
+    <script src="scoreboard.js"></script>
     <script src="challenge4.js"></script>
 </body>
 </html>
