--- a/matching.html
+++ b/matching.html
@@ -20,6 +20,7 @@
             <a href="menu.html" class="menu-button center-button">Return to Menu</a>
         </div>
     </div>
+    <script src="scoreboard.js"></script>
     <script src="script_1.js"></script>
 </body>
 </html>
