Refactor challenges to use shared utilities

--- a/challenge2.html
+++ b/challenge2.html
@@ -40,6 +40,7 @@
 
     <!-- Include the JS for this challenge -->
     <script src="scoreboard.js"></script>
+    <script src="utils.js"></script>
     <script src="challenge2.js"></script>
 </body>
 </html>
