--- a/challenge4.html
+++ b/challenge4.html
@@ -26,6 +26,7 @@
     </div>
 
     <script src="scoreboard.js"></script>
+    <script src="utils.js"></script>
     <script src="challenge4.js"></script>
 </body>
 </html>
