--- a/challenge1.html
+++ b/challenge1.html
@@ -31,6 +31,7 @@
     </div>
 
     <script src="scoreboard.js"></script>
+    <script src="utils.js"></script>
     <script src="challenge1.js"></script>
 </body>
 </html>
