--- a/challenge3.html
+++ b/challenge3.html
@@ -32,6 +32,7 @@
     </div>
 
     <script src="scoreboard.js"></script>
+    <script src="utils.js"></script>
     <script src="challenge3.js"></script>
 </body>
 </html>
