--- a/challenge5.html
+++ b/challenge5.html
@@ -25,6 +25,7 @@
 
     <!-- <script src="words.js"></script> -->
     <script src="scoreboard.js"></script>
+    <script src="utils.js"></script>
     <script src="challenge5.js"></script> <!-- Your main game script -->
     
 </body>
