Add menu navigation links

--- a/challenge3.html
+++ b/challenge3.html
@@ -27,7 +27,7 @@
             <button id="start-game" class="menu-button center-button">Start Game</button>
             <button id="reset-game" class="menu-button center-button">Reset Game</button>
             <button id="next-word" class="menu-button center-button">Next Word</button>
-            <button id="return-to-menu" class="menu-button center-button">Return to Menu</button>
+            <a href="menu.html" id="return-to-menu" class="menu-button center-button">Return to Menu</a>
         </div>
     </div>
 
