--- a/hangman.html
+++ b/hangman.html
@@ -35,6 +35,7 @@
 
         <!-- Reset button -->
         <button id="reset-button">Reset Game</button>
+        <a href="menu.html" class="menu-button center-button">Return to Menu</a>
     </div>
 
     <script src="scoreboard.js"></script>
